--- a/style.css
+++ b/style.css
@@ -1,49 +1,85 @@
-h1{
-    margin: 0px 40px 35px 40px;
-}
-p{
-    margin: 10px 0px 0px -280px;
-    font-size: 20px;
-}
-
-body{
-    background-color: #F0E68C;
-}
-
-.p p {
-    margin: 0px 40px 40px 40px;
-}
-
-main img {
-  margin: -20px 40px 100px 125px;
-  width: 450px;
-}
-.p2 p {
-    margin: -90px 0px 0px 0px;
-    color: black;
-}
-
-h3{
-    text-align: center;
-    color: white;
-    background-color: black;
-}
-span{
-    background-color: khaki;
-    color: rgb(205, 21, 0);
-}
-p2,p3,p4,p5,p6,p7{
-    font-size: 20px;
-
-}
-p2,p3,p4,p5,p6{
-    margin: 0px 25px 25px 0px;
-}
-.p7 {
+header{
+    background-image: linear-gradient( hsl(244, 70%, 55%), rgba(43, 0, 122, 0), hsl(244, 70%, 55%));
+    height: 100px;
+    display: flex;
+    justify-content: center;
     align-items: center;
+
 }
-.p7 img{
-  align-items:center;
-  margin: 0px 0px 0px 70px ;
-  width: 550px;
+
+h2{
+    text-align: center;
+
+}
+
+.wiw a  {
+
+    width: 40px;
+    height: 50px;
+display: flex;
+    
+    flex-wrap: wrap; 
+}
+
+    
+
+
+ .wiw a :hover {
+    opacity: 0.6;
+
+  
+    height: 40px;
+    transition: 0.1s ;
+  
+    
+}
+
+
+
+ a  {
+ size: 40px;
+    width: 40px;
+    height: 50px;
+margin: 00px 00px 00px 00px;
+    
+
+}
+
+    
+
+
+ .did a :hover {
+    opacity: 0.6;
+
+  
+    height: 40px;
+    transition: 0.1s ;
+  
+    
+}
+body{
+    background-color: rgb(0, 0, 116);
+}
+footer{
+     background-image: linear-gradient( hsl(244, 70%, 55%), rgba(43, 0, 122, 0), hsl(244, 70%, 55%));
+    height: 100px;
+
+
+}
+li {
+  color: red;
+
+}
+ul{
+    color: yellow;
+}
+button{
+    background-color: yellow;
+    font-size: 25px  ;
+    margin-left: 600px ;
+    margin-top: -250px;
+}
+h4{
+    margin-top: 100px;
+    opacity: 0;
 }
