--- a/style.css
+++ b/style.css
@@ -1,85 +1,20 @@
-header{
-    background-image: linear-gradient( hsl(244, 70%, 55%), rgba(43, 0, 122, 0), hsl(244, 70%, 55%));
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body{
+  padding: 25px;
+}
+.title {
+	color: White ;
+}
+
+h1 {
+  background-color: black;
 
 }
+p1{
+  background-color: skyblue ;
+}
+
 
 h2{
-    text-align: center;
-
-}
-
-.wiw a  {
-
-    width: 40px;
-    height: 50px;
-display: flex;
-    
-    flex-wrap: wrap; 
-}
-
-    
-
-
- .wiw a :hover {
-    opacity: 0.6;
-
-  
-    height: 40px;
-    transition: 0.1s ;
-  
-    
-}
-
-
-
- a  {
- size: 40px;
-    width: 40px;
-    height: 50px;
-margin: 00px 00px 00px 00px;
-    
-
-}
-
-    
-
-
- .did a :hover {
-    opacity: 0.6;
-
-  
-    height: 40px;
-    transition: 0.1s ;
-  
-    
-}
-body{
-    background-color: rgb(0, 0, 116);
-}
-footer{
-     background-image: linear-gradient( hsl(244, 70%, 55%), rgba(43, 0, 122, 0), hsl(244, 70%, 55%));
-    height: 100px;
-
-
-}
-li {
-  color: red;
-
-}
-ul{
-    color: yellow;
-}
-button{
-    background-color: yellow;
-    font-size: 25px  ;
-    margin-left: 600px ;
-    margin-top: -250px;
-}
-h4{
-    margin-top: 100px;
-    opacity: 0;
+    background-color: black;
+	  color: White ;
 }
